messaging_app/messaging_app/blue_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messaging-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: messaging-app
  template:
    metadata:
      labels:
        app: messaging-app
    spec:
      containers:
        - name: messaging-app
          image: emmaebi/messaging_app-web:latest
          ports:
            - containerPort: 8000
