messaging_app/messaging_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-service
spec:
  selector:
    app: messaging-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
