messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
spec:
  rules:
    - host: messaging.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: messaging-service
                port:
                  number: 80
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: messaging-service
                port:
                  number: 80
          - path: /api-auth
            pathType: Prefix
            backend:
              service:
                name: messaging-service
                port:
                  number: 80
